testsuite/tests/th/T17820c.stderr
T17820c.hs:8:18: error: [GHC-28914]
    Level error: ‘meth’ is bound at level 0 but used at level -1
    Hint: quoting [| meth |] or an enclosing expression
    would allow the quotation to be used at an earlier level

